Closed Bug 1305340 Opened 9 years ago Closed 6 years ago

Re-enable low-latency mode

Categories

(Core :: Audio/Video: Playback, defect, P3)

Other
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox67 --- fixed

People

(Reporter: jya, Assigned: jya)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

According to bug 1301869 comment 13; simply remuxing the video prevent the file from bug 1205083 to crash... This bug is to investigate on what the differences are, identify the problem and if possible attempt to re-enable low latency decoding on windows.
Could you please attach the file you've remuxed? thank you
Flags: needinfo?(CoolCmd)
Assignee: nobody → jyavenard
Attached file coolcmd.zip
(In reply to Jean-Yves Avenard [:jya] from comment #1) > Could you please attach the file you've remuxed? in the attached archive: original.mp4 - first 5 seconds of file 2-692-mobile.mp4 from bug 1205083. fragmented.mp4 - original.mp4 converted to 'mse-friendly' format by GPAC version 0.5.2-DEV-rev384-gaa0f405-master. convert original to fragmented.cmd - convert commands (for Windows). coolcmd.html - playing back fragmented.mp4. you can also drag & drop fragmented.mp4 to firefox window.
Flags: needinfo?(CoolCmd)
Flags: needinfo?(cpearce)
Flags: needinfo?(cpearce)
Blocks: 1520894
Blocks: 1529812

Chrome has had it enabled for years, we had disabled it originally due to crashes seen on Windows 7.

Jean-Yves, why only on windows 10? chrome uses LL mode on windows 7 too.

Pushed by jyavenard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e7f1772b4796 Enable low-latency decoding on Windows 10 and later. r=pehrsons

(In reply to CoolCmd from comment #4)

Jean-Yves, why only on windows 10? chrome uses LL mode on windows 7 too.

Officially, LowLatency mode was introduced in Windows 8.

We're in soft freeze, I want to keep things safe. And you had crashes.
I will extend to windows 8 for FF 68

Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
Depends on: 1536041
Regressions: 1560440
No longer regressions: 1560440
No longer depends on: 1536041
Regressions: 1536041

(In reply to Jean-Yves Avenard [:jya] from comment #6)

I will extend to windows 8 for FF 68

Even FF 72 enables low-latency mode only in Windows 10 (IsWin10OrLater() in WMFVideoMFTManager.cpp)... :(

Regressions: 1611106
Regressions: 1556378
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: