Bug 1305340 - Enable low-latency decoding on Windows 10 and later. r=pehrsons

Chrome has had it enabled for years, we had disabled it originally due to crashes seen on Windows 7.

Differential Revision: https://phabricator.services.mozilla.com/D23656